# cuda-path-tracer

./: .clang-format  CMakeLists.txt  INSTRUCTION.md  README.md
models/: utah_teapot.glb
models/blender_cube/: blender_cube.gltf
models/stanford_bunny/: stanford_bunny.gltf
models/stanford_bunny/res2/: stanford_bunny.gltf
models/stanford_bunny/res3/: stanford_bunny.gltf
models/stanford_bunny/res4/: stanford_bunny.gltf
models/stanford_dragon/: stanford_dragon.gltf
models/stanford_dragon/res2/: stanford_dragon.gltf
models/suzanne/: suzanne.gltf
scenes/: avocado.json  blender_cube.json  checkerboard.json  closed_scene.json  colorful_room.json  cornell.json  cornell_box.json  damaged_helmet.json  dof.json  glass_cube.json  glass_sphere.json  glass_spheres.json  gltf_blender_cube.json  many_materials.json  open_scene.json  path_discarding.json  pbr.json  perfectly_diffuse.json  perfectly_specular.json  perfectly_transmissive.json  pure_reflection.json  pure_reflection_inv.json  pure_transmission.json  pure_transmission_cube.json  pure_transmission_sphere.json  roughness_test.json  single_sphere_light.json  stanford_bunny.json  stanford_bunny_res2.json  stanford_bunny_res3.json  stanford_bunny_res4.json  stanford_dragon.json  stanford_dragon_res2.json  suzanne.json  utah_teapot.json
scenes/diffuse/: sphere.json  stanford_dragon.json  suzanne.json  utah_teapot.json
src/: aabb.hpp  bvh.hpp  camera.cpp  camera.hpp  geometry.hpp  glslUtility.cpp  glslUtility.hpp  gui_data.hpp  hit.cu  hit.cuh  image.cpp  image.h  image.hpp  interactions.cu  interactions.h  intersection.cu  intersection.cuh  intersection.hpp  intersections.cu  intersections.h  kern_exec_config.cpp  kern_exec_config.hpp  main.cpp  material.hpp  mesh.hpp  path_segment.hpp  path_trace.cu  path_trace.h  path_tracer.cu  path_tracer.h  path_tracer.hpp  pathtrace.cu  ray.cuh  ray.hpp  render_context.cpp  render_context.hpp  sample.cu  sample.cuh  sample.hpp  scene.cpp  (+11 more)
